--- a/about.html
+++ b/about.html
@@ -13,29 +13,43 @@
     <nav>
       <a href="index.html">home</a>
       <a href="about.html">about</a>
-      <a href="products.html">products</a>
     </nav>
 
-    <div class="about-p">
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus harum
-        minima doloremque fugiat eaque natus ipsum, distinctio veniam ex non
-        quaerat? Explicabo voluptatibus nemo possimus culpa expedita. Provident,
-        incidunt et.
-      </p>
-
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quasi
-        expedita inventore nihil nobis cumque itaque labore eum ut officia, nemo
-        quis voluptates, eligendi odio quas ex consequatur ab exercitationem!
-      </p>
-
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex deleniti
-        commodi rem iusto omnis ullam quis aperiam nisi nemo sit cupiditate
-        quibusdam, nobis animi numquam architecto exercitationem maxime amet
-        labore.
-      </p>
+    <div class="content-wrapper">
+      <div class="content-block">
+        <div id="content1"></div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae delectus
+          quos nulla natus inventore praesentium, earum laborum provident illo,
+          minima esse beatae ipsa, unde id tenetur vitae possimus iusto atque!
+        </p>
+      </div>
+      <div class="content-block">
+        <div id="content2"></div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae delectus
+          quos nulla natus inventore praesentium, earum laborum provident illo,
+          minima esse beatae ipsa, unde id tenetur vitae possimus iusto atque!
+        </p>
+      </div>
+      <div class="content-block">
+        <div id="content3"></div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae delectus
+          quos nulla natus inventore praesentium, earum laborum provident illo,
+          minima esse beatae ipsa, unde id tenetur vitae possimus iusto atque!
+        </p>
+      </div>
+      <div class="content-block">
+        <div id="content4"></div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae delectus
+          quos nulla natus inventore praesentium, earum laborum provident illo,
+          minima esse beatae ipsa, unde id tenetur vitae possimus iusto atque!
+        </p>
+      </div>
     </div>
+
+    <footer>2021 Sierra Braun</footer>
   </body>
 </html>
