--- a/index.html
+++ b/index.html
@@ -13,9 +13,40 @@
     <nav>
       <a href="index.html">home</a>
       <a href="about.html">about</a>
-      <a href="products.html">products</a>
     </nav>
 
-    <div class="home-title"><p>WELCOME TO MY WEBPAGE</p></div>
+    <div class="home-title"><p>WELCOME TO THIS COOL WEBSITE</p></div>
+
+    <div class="home">
+      <div class="content-title">
+        <h1>content</h1>
+      </div>
+
+      <div class="content-wrapper">
+        <div class="content-block">
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque
+            deleniti explicabo libero voluptatum ullam maiores in delectus quasi
+            incidunt officiis dolor, earum laboriosam accusamus possimus non.
+            Blanditiis facilis doloremque fuga?
+          </p>
+        </div>
+
+        <div class="content-block">
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque
+            deleniti explicabo libero voluptatum ullam maiores in delectus quasi
+            incidunt officiis dolor, earum laboriosam accusamus possimus non.
+            Blanditiis facilis doloremque fuga?
+          </p>
+        </div>
+      </div>
+
+      <div class="learn-more"><a href="about.html">learn more</a></div>
+    </div>
+
+    <footer>
+      <p>2021 Sierra Braun</p>
+    </footer>
   </body>
 </html>
