--- a/index.html
+++ b/index.html
@@ -11,42 +11,85 @@
   </head>
   <body>
     <nav>
-      <a href="index.html">home</a>
-      <a href="about.html">about</a>
+      <a href="index.html">Home</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
     </nav>
 
-    <div class="home-title"><p>WELCOME TO THIS COOL WEBSITE</p></div>
-
-    <div class="home">
-      <div class="content-title">
-        <h1>content</h1>
+    <div class="wrapper">
+      <div class="hero-wrapper">
+        <h1>Home Splash</h1>
       </div>
 
       <div class="content-wrapper">
-        <div class="content-block">
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque
-            deleniti explicabo libero voluptatum ullam maiores in delectus quasi
-            incidunt officiis dolor, earum laboriosam accusamus possimus non.
-            Blanditiis facilis doloremque fuga?
-          </p>
+        <div class="top-row">
+          <div class="small-content">
+            <div class="top-stripe"></div>
+            <div class="bottom-box">
+              <p>SubTitle</p>
+            </div>
+          </div>
+          <div class="small-content">
+            <div class="top-stripe"></div>
+            <div class="bottom-box">
+              <p>SubTitle</p>
+            </div>
+          </div>
         </div>
 
-        <div class="content-block">
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque
-            deleniti explicabo libero voluptatum ullam maiores in delectus quasi
-            incidunt officiis dolor, earum laboriosam accusamus possimus non.
-            Blanditiis facilis doloremque fuga?
-          </p>
+        <div class="bottom-row">
+          <div class="small-content">
+            <div class="top-stripe"></div>
+            <div class="bottom-box">
+              <p>SubTitle</p>
+            </div>
+          </div>
+          <div class="small-content">
+            <div class="top-stripe"></div>
+            <div class="bottom-box">
+              <p>SubTitle</p>
+            </div>
+          </div>
         </div>
       </div>
 
-      <div class="learn-more"><a href="about.html">learn more</a></div>
+      <div class="middle-content">
+        <p>
+          "Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, ea
+          commodi? Officia minus incidunt molestiae totam atque modi asperiores
+          perferendis, ad aliquam deserunt maxime temporibus ea mollitia dolor,
+          placeat expedita. Lorem, ipsum dolor sit amet consectetur adipisicing
+          elit. Recusandae est nobis veniam provident, ex dolorum repellat illum
+          ullam et iure ab fugiat, perferendis pariatur quidem! Sed saepe
+          cupiditate sunt quae. Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Exercitationem at voluptas rem vero expedita iste
+          dolore atque molestias beatae assumenda, nam numquam quae mollitia
+          similique fugit, alias rerum animi consequuntur!"
+        </p>
+      </div>
+
+      <div class="content-wrapper">
+        <div class="big-content">
+          <div class="top-stripe"></div>
+          <div class="bottom-box">
+            <p>SubTitle</p>
+          </div>
+        </div>
+
+        <div class="big-content">
+          <div class="top-stripe"></div>
+          <div class="bottom-box">
+            <p>SubTitle</p>
+          </div>
+        </div>
+      </div>
     </div>
 
     <footer>
-      <p>2021 Sierra Braun</p>
+      <div class="footer-text">
+        <p>Copyright</p>
+        <p>2021</p>
+      </div>
     </footer>
   </body>
 </html>
